--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Co   mpatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, i    nitial-scale=1.0">
-    <title>The Universe / Formulario</title>
+    <title>The Universe / Registro</title>
     <!--CSS-->
     <link rel="stylesheet" href="./style/form.css">
     <!--BOOTSTRAP-->
