--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Co   mpatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, i    nitial-scale=1.0">
-    <title>The Universe / Objetos</title>
+    <title>The Universe / Nebulosas</title>
     <!--CSS-->
     <link rel="stylesheet" href="./style/table.css">
     <!--BOOTSTRAP-->
@@ -22,14 +22,14 @@
         <nav id="links">
             <a id="sisSol" href="./index.html">SISTEMA SOLAR</a>
             <a id="viaLactea" href="./viaLactea.html">VIA LACTEA</a>
-            <a id="table" href="./table.html">OBJETOS</a>
+            <a id="table" href="./table.html">NEBUOSAS</a>
             <a id="form" href="./form.html">REGISTRO</a>
         </nav> 
     </header>
     
     <!--TITLE-->
     <div id="title" class="sticky-top">
-        <h3 id="minitit">OBJETOS DEL UNIVERSO</h3>
+        <h3 id="minitit">LAS NEBULOSAS DEL UNIVERSO</h3>
     </div>
     
 
