--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a id="sisSol" href="./index.html">SISTEMA SOLAR</a>
             <a id="viaLactea" href="./viaLactea.html">VIA LACTEA</a>
             <a id="table" href="./table.html">OBJETOS</a>
-            <a id="form" href="./form.html">REGISTRO</a>
+            <a id="form" href="./form.html">NEBULOSAS</a>
         </nav> 
     </header>
     
