--- a/viaLactea.html
+++ b/viaLactea.html
@@ -22,7 +22,7 @@
         <nav id="links">
             <a id="sisSol" href="./index.html">SISTEMA SOLAR</a>
             <a id="viaLactea" href="./viaLactea.html">VIA LACTEA</a>
-            <a id="table" href="./table.html">OBJETOS</a>
+            <a id="table" href="./table.html">NEBULOSAS</a>
             <a id="form" href="./form.html">REGISTRO</a>
         </nav> 
     </header>
